crates/components/tests/snapshots/components__net_cells_chart.snap
---
source: crates/components/tests/components.rs
expression: dump
---
[#cdd6f4/-/REVERSED]iface   [-/-/NONE] [#cdd6f4/-/REVERSED]state     [-/-/NONE] [#cdd6f4/-/REVERSED]      rx[-/-/NONE] [#cdd6f4/-/REVERSED]      tx[-/-/NONE] [#cdd6f4/-/REVERSED] drop[-/-/NONE] [#cdd6f4/-/REVERSED]  err[-/-/NONE]                                                                         
[#a6e3a1/-/NONE]●[#cdd6f4/-/NONE] eno1[-/-/NONE]   [#a6e3a1/-/NONE]up[-/-/NONE]             [#cdd6f4/-/BOLD]9.3M[-/-/NONE]     [#cdd6f4/-/BOLD]632k[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]                                                                         
[#a6e3a1/-/NONE]●[#cdd6f4/-/NONE] wlp7s0[-/-/NONE] [#a6e3a1/-/NONE]up[-/-/NONE]              [#cdd6f4/-/BOLD]40k[-/-/NONE]     [#cdd6f4/-/BOLD]9.0k[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]                                                                         
[#a6adc8/-/NONE]○[#cdd6f4/-/NONE] eno2[-/-/NONE]   [#a6adc8/-/NONE]down[-/-/NONE]             [#cdd6f4/-/BOLD]0B[-/-/NONE]       [#cdd6f4/-/BOLD]0B[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]                                                                         
[#a6adc8/-/NONE]gateway [#cdd6f4/-/NONE]1.6 ms[#a6adc8/-/NONE] · 1.1.1.1 [#cdd6f4/-/NONE]14.5 ms[-/-/NONE]                                                                                          
[-/-/NONE]   [#89b8f6/-/NONE]⣀⡠⠤[#89b6f8/-/NONE]⠤⠒⠊[#89b4f9/-/NONE]⠉⠉⠉⠉⠉⠉[#89b5f8/-/NONE]⠉⠑⠒[#89b7f7/-/NONE]⠒⠢⠤[#8abaf5/-/NONE]⠤⣀⡀[-/-/NONE]                            [#8abaf5/-/NONE]⣀⡠[#89b7f7/-/NONE]⠤⠔⠒[#89b5f8/-/NONE]⠒⠒⠊⠉[#88b4f9/-/NONE]⠉⠉⠉[#89b4f9/-/NONE]⠉⠉⠒[#89b6f8/-/NONE]⠒⠒⠒[#89b8f6/-/NONE]⠒⠢⠤[#8abcf4/-/NONE]⣀⡀[-/-/NONE]                             [#8abaf5/-/NONE]⢀⣀[#89b7f7/-/NONE]⠤⠤⠒[#89b4f9/-/NONE]⠒⠒⠉⠉⠉⠉⠉⠉[#89b5f8/-/NONE]↓eno1
[-/-/NONE]                       [#8abaf5/-/NONE]⠈[#8abdf3/-/NONE]⠉⠒⠢[#8bc1f0/-/NONE]⠤⢄⣀[#8cc4ee/-/NONE]⣀⡀[-/-/NONE]            [#8cc4ee/-/NONE]⢀[#8bc1f0/-/NONE]⣀⡠⠤[#8bbef2/-/NONE]⠤⠒⠊[#8abaf5/-/NONE]⠉[-/-/NONE]                      [#8abcf4/-/NONE]⠈⠉[#8bbff2/-/NONE]⠒⠒⠤[#8bc2ef/-/NONE]⠤⢄⣀[-/-/NONE]              [#8cc3ee/-/NONE]⣀[#8bc0f0/-/NONE]⣀⡠⠤[#8abdf3/-/NONE]⠒⠒⠉[#8abaf5/-/NONE]⠉⠁[-/-/NONE]                 
[-/-/NONE]   [#8dcbe9/-/NONE]⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣈⣉⣉⣑⣒⣒⣒⣒⣒⣒⣒⣒⣉⣁⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[-/-/NONE] [#8cc5ed/-/NONE]⠉⠉⠒[#8cc6ec/-/NONE]⠒⠒⠒⠒⠒⠒[#8cc6ed/-/NONE]⠒⠒⠉[#8cc3ee/-/NONE]⠉⠉[-/-/NONE]      [#8dcbe9/-/NONE]⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀↓wlp7s0
[#313244/-/NONE]─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[#deb3ef/-/NONE]↑eno1
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[#cdd6f4/-/REVERSED]proto[-/-/NONE] [#cdd6f4/-/REVERSED]local                [-/-/NONE] [#cdd6f4/-/REVERSED]remote              [-/-/NONE] [#cdd6f4/-/REVERSED]state     [-/-/NONE] [#cdd6f4/-/REVERSED]process               [-/-/NONE]                                        
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:52344[-/-/NONE] [#cdd6f4/-/NONE]140.82.112.4:443[-/-/NONE]     [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]firefox (4242)[-/-/NONE]                                                
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]0.0.0.0:22[-/-/NONE]            [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]            [#a6adc8/-/NONE]LISTEN[-/-/NONE]     [#a6adc8/-/NONE]uid 1000[-/-/NONE]                                                      
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:44120[-/-/NONE] [#cdd6f4/-/NONE]162.159.130.234:443[-/-/NONE]  [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]steam (9001)[-/-/NONE]                                                  
[#a6adc8/-/NONE]udp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:68[-/-/NONE]    [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]                       [#a6adc8/-/NONE]uid 1000[-/-/NONE]                                                      
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:52352[-/-/NONE] [#cdd6f4/-/NONE]140.82.114.26:443[-/-/NONE]    [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]firefox (4242)[-/-/NONE]                                                
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]127.0.0.1:6600[-/-/NONE]        [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]            [#a6adc8/-/NONE]LISTEN[-/-/NONE]     [#cdd6f4/-/NONE]mpd (7000)[-/-/NONE]                                                    
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:48802[-/-/NONE] [#cdd6f4/-/NONE]140.82.113.25:22[-/-/NONE]     [#a6adc8/-/NONE]TIME-WAIT[-/-/NONE]  [#a6adc8/-/NONE]uid 1000[-/-/NONE]                                                      
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:39004[-/-/NONE] [#cdd6f4/-/NONE]13.107.42.14:443[-/-/NONE]     [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]code (5150)[-/-/NONE]                                                   
[#a6adc8/-/NONE]tcp6[-/-/NONE]  [#cdd6f4/-/NONE][::1]:6600[-/-/NONE]            [#cdd6f4/-/NONE][::1]:39422[-/-/NONE]          [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]mpd (7000)[-/-/NONE]                                                    
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:52360[-/-/NONE] [#cdd6f4/-/NONE]151.101.1.140:443[-/-/NONE]    [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]firefox (4242)[-/-/NONE]                                                
[#a6adc8/-/NONE]udp[-/-/NONE]   [#cdd6f4/-/NONE]0.0.0.0:5353[-/-/NONE]          [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]                       [#cdd6f4/-/NONE]avahi-daemon (1122)[-/-/NONE]                                           
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:44126[-/-/NONE] [#cdd6f4/-/NONE]155.133.248.53:27020[-/-/NONE] [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]steam (9001)[-/-/NONE]                                                  
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]0.0.0.0:5355[-/-/NONE]          [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]            [#a6adc8/-/NONE]LISTEN[-/-/NONE]     [#a6adc8/-/NONE]uid 1000[-/-/NONE]                                                      
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:60122[-/-/NONE] [#cdd6f4/-/NONE]192.168.100.30:22[-/-/NONE]    [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]ssh (8810)[-/-/NONE]                                                    
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]192.168.100.154:52368[-/-/NONE] [#cdd6f4/-/NONE]34.107.221.82:443[-/-/NONE]    [#a6e3a1/-/NONE]ESTAB[-/-/NONE]      [#cdd6f4/-/NONE]firefox (4242)[-/-/NONE]                                                
[#a6adc8/-/NONE]udp[-/-/NONE]   [#cdd6f4/-/NONE]127.0.0.1:53[-/-/NONE]          [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]                       [#cdd6f4/-/NONE]systemd-resolve (1240)[-/-/NONE]                                        
[#a6adc8/-/NONE]tcp6[-/-/NONE]  [#cdd6f4/-/NONE][::]:22[-/-/NONE]               [#cdd6f4/-/NONE][::]:0[-/-/NONE]               [#a6adc8/-/NONE]LISTEN[-/-/NONE]     [#a6adc8/-/NONE]uid 1000[-/-/NONE]                                                      
[#a6adc8/-/NONE]tcp[-/-/NONE]   [#cdd6f4/-/NONE]127.0.0.1:631[-/-/NONE]         [#cdd6f4/-/NONE]0.0.0.0:0[-/-/NONE]            [#a6adc8/-/NONE]LISTEN[-/-/NONE]     [#cdd6f4/-/NONE]cupsd (1430)[-/-/NONE]                                                  
[#a6adc8/-/NONE]sort traffic · a all · s sort[#313244/-/NONE]  (3 hidden)[-/-/NONE]
